<resources>
    <string name="app_name">Python Programming Tutorial</string>
    <string name="blog_studygyan">Blog-StudyGyan</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="about_us">About Us</string>
    <string name="more_apps">More Apps</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
